# djangoProject_global

./: db.sqlite3  manage.py  pyproject.toml
authentication/: models.py  serializer.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_user_options_user_role.py
djangoProject_global/: asgi.py  settings.py  urls.py  wsgi.py
vacancies/: admin.py  models.py  permissions.py  serializer.py  urls.py  views.py
vacancies/migrations/: 0001_initial.py  0002_vacancy_user.py  0003_skill_vacancy_skills.py  0004_alter_skill_options_alter_vacancy_options.py  0005_skill_is_active.py
