[tool.poetry]
name = "djangoproject-global"
version = "0.1.0"
description = "blank"
authors = ["Gysborn <forparty@gmail.com>"]
readme = "README.md"
packages = [{include = "djangoproject_global"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
